@@ -1,6 +1,8 @@
 NOCC 1.3    ?? ??, 200?
 
   Bugs
+    * Bug #1581966 : Bold tag instead of strong tag in pt-br.php (Arnaud
+      Boudou).
     * Bug #1579997 : Download mail, illegal characters in filename on save
       (Arnaud Boudou).
     * Bug #1578946 : Image tags of smiley's not XHTML 1.1 (Arnaud Boudou).
